# HHParser

./: README.md  main.py  pyproject.toml
src/: class_Filework_JSON.py  class_HH.py  class_Parser.py  class_Vacancy.py  class_abc_Filework.py  class_abc_Parser.py  utils.py
